Codei a página de estabelecimentos e realizei alguns ajustes na main da home e no carrossel

--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
 
         <section id="lojas-ouro">
             <div class="card">
-                <a href="#">
+                <a href="/estabelecimentos.html">
                     <img src="./img/armazem.png" alt="Armazém antigo de bairro">
                     <div class="container">
                         <p>
@@ -83,7 +83,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="#">
+                <a href="/estabelecimentos.html">
                     <img src="./img/barbearia.png" alt="Maquina de cabelo, texoura e pente">
                     <div class="container">
                         <p>
@@ -93,7 +93,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="#">
+                <a href="/estabelecimentos.html">
                     <img src="./img/eletronicos.png" alt="Alguns eletrônicos, tv, smartphone, smartwatch">
                     <div class="container">
                         <p>
@@ -103,7 +103,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="#">
+                <a href="/estabelecimentos.html">
                     <img src="./img/farmacia.png" alt="Um homen comprando remedio na fármacia">
                     <div class="container">
                         <p>
@@ -113,7 +113,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="#">
+                <a href="/estabelecimentos.html">
                     <img src="./img/hortalica.png" alt="Cesta cheia de hortalícia">
                     <div class="container">
                         <p>
@@ -123,7 +123,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="#">
+                <a href="/estabelecimentos.html">
                     <img src="./img/materiais-construcao.png" alt="Pequeno carrinho de supermercado cheio de ferramentas de construção civil">
                     <div class="container">
                         <p>
@@ -133,7 +133,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="#">
+                <a href="/estabelecimentos.html">
                     <img src="./img/pet-shop.png" alt="Um desenho de um cachorrinho e um gatinho">
                     <div class="container">
                         <p>
