--- a/cadastro.html
+++ b/cadastro.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/cadastro.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/cadastro.css">
+    <title>Cadastro</title>
 </head>
+
 <body>
+
     
 </body>
 </html>
