resposividade do form. de cadastro finalizado

--- a/login.html
+++ b/login.html
@@ -46,8 +46,12 @@
 
                 <div>
                     <p>Ainda não é cadastrado?
-                        <a href="#">CRIAR CONTA</a>
+                        <a href="/cadastro.html">CRIAR CONTA</a>
                     </p>
+                </div>
+
+                <div>
+                    <a href="/site/home.html">Voltar</a>
                 </div>
             </form>
         </div>
