Correções de incopatibilidade entre codigos

--- a/parceiros.html
+++ b/parceiros.html
@@ -11,9 +11,69 @@
     <title>MKP - Parceiros</title>
     <link rel="stylesheet" href="./css/parceiros.css">
     <link rel="stylesheet" href="./css/busca-estabelecimentos.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
+    <!-- CODIGO DO MÁRCIO -->
+
+    <header class="cabecalho">
+        <img class="cabecalho-logo" src="img/LogoMPKrct.webp" alt="logoMpk">
+
+        <div class="search-box">
+            <input type="text" class="search-txt" placeholder="Pesquisar..." />
+            <a href="#" class="search-btn">
+                <img id="lupa-1" src="img/lupa-menor.png" alt="lupa">
+            </a>
+        </div>
+
+        <img id="loginimagem" src="img/perfilusiconaAZ.png">
+
+        <nav class="dp-menu">
+            <ul>
+                <li><a href="#">LOGIN</a></li>
+                <li>|</li>
+                <li><a href="#">CRIAR CONTA</a>
+
+                    <ul>
+                        <li><a href="#">Usuário</a></li>
+                        <li><a href="#">Vendedor</a></li>
+                        <li><a href="#">Parceiro</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section class="barralink">
+        <nav id="hamburguer">
+            <input type="checkbox" id="check">
+            <label for="check">
+                <img src="img/menuhamb az.png" alt="menu hamburguer" style="cursor: pointer;" />
+            </label>
+            <span>Departamentos</span>
+
+            <div class="submenu-hamb">
+                <ul>
+                    <li><a href="#">Eletroeletrônicos</a></li>
+                    <li><a href="#">Utilidades do Lar</a></li>
+                    <li><a href="#">Moda</a></li>
+                    <li><a href="#">Farmácia</a></li>
+                    <li><a href="#">Construção</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <nav class="navbar">
+            <a class="navbar-item2" href="#"><img src="img/loja-online.png" />Estabelecimentos</a>
+            <a class="navbar-item3" href="#"><img src="img/carrinho-de-compras2.png" />Minhas Compras</a>
+            <a class="navbar-item4" href="#"><img src="img/ofertaaz.png" />Ofertas</a>
+            <a class="navbar-item5" href="#"><img src="img/trofeuaz.png" />Destaques do Mês</a>
+            <a class="navbar-item6" href="#"><img src="img/parceirocolor.png" />Parceiros</a>
+            <a class="navbar-item7" href="#"><img src="img/compras-online.png" />Venda no MPK</a>
+        </nav>
+    </section>
+
     <main>
         <section id="buscar">
             <div id="divBusca">
@@ -25,7 +85,8 @@
             </div>
             <div class="info-parceiro">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
                     <div class="info-texto">
                         <p>Seja um Profissional</p>
                         <p>Parceiro</p>
@@ -33,11 +94,12 @@
                     </div>
                 </a>
             </div>
-            </section>
+        </section>
         <section id="parceiros">
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -48,7 +110,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -59,7 +122,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -70,7 +134,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -81,7 +146,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -92,7 +158,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -103,7 +170,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -114,7 +182,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -125,7 +194,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -136,7 +206,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -147,7 +218,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -158,7 +230,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -169,7 +242,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -180,7 +254,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -191,7 +266,8 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="./img/parceiro.png" alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
+                    <img src="./img/parceiro.png"
+                        alt="Icone de homen de capacete com duas ferramentas cruzadas na frente">
 
                     <div class="container">
                         <p>
@@ -200,10 +276,105 @@
                     </div>
                 </a>
             </div>
-  
+
         </section>
 
     </main>
+
+    <!-- CÓDIGO DO LEONARDO -->
+
+    <footer>
+        <div class="main-content">
+            <div class="left box">
+                <div>
+                    <img src="./img/NewLogo.ico" alt="Logo tipo da MKP">
+                </div>
+                <div class="content">
+                    <p>Revolucionando as vendas online e transforma histórias de pequenos e médios lojistas.
+                    </p>
+                    <div class="social">
+                        <a herf="#"><span class="fab fa-facebook-f"></span></a>
+                        <a herf="#"><span class="fab fa-instagram"></span></a>
+                        <a herf="#"><span class="fab fa-linkedin"></span></a>
+                        <a herf="#"><span class="fab fa-twitter"></span></a>
+                    </div>
+                </div>
+                <!--lef box-->
+            </div>
+            <!--main-content-->
+            <div class="center box">
+                <h2>Sedes</h2>
+                <div class="content">
+                    <div class="place">
+                        <span class="fas fa-map-marker"></span>
+                        <span class="text">Belo Horizonte - São Paulo - Ilheus - Cachoeiro de Itapemirim - Rio de
+                            Janeiro -
+                            Juiz de Fora</span>
+                    </div>
+                    <div class="email">
+                        <span class="fas fa-envelope"></span>
+                        <span class="text">grupo_7@mpk.com</span>
+                    </div>
+                </div>
+                <!--content-->
+            </div>
+            <!--center box-->
+
+            <div class="center box">
+                <h2>Desenvolvedores</h2>
+                <div class="content">
+                    <div class="place">
+                        <div class="dev1">
+                            <span class="fab fa-linkedin"></span>
+                            <span class="text">Leonardo F Lopes</span>
+                        </div>
+                        <div class="dev1">
+                            <span class="fab fa-linkedin"></span>
+                            <span class="text">Luciano Camargo</span>
+                        </div>
+                        <div class="dev1">
+                            <span class="fab fa-linkedin"></span>
+                            <span class="text">Marcio Montovani</span>
+                        </div>
+                        <div class="dev1">
+                            <span class="fab fa-linkedin"></span>
+                            <span class="text">Marcelo C Santos</span>
+                        </div>
+                    </div>
+                    <div class="bandeira">
+                        <img src="./img/bandeira.jpg" alt="Bandeira dos cartoes MasterCard, Visa e Elo" id="imgband">
+                    </div>
+                </div>
+                <!--content-->
+            </div>
+            <!--center box-->
+            <div class="right box">
+                <h2>Contato</h2>
+                <div class="conten">
+                    <form action="#">
+                        <div class="email">
+                            <div class="text">Email *</div>
+                            <input type="email" required>
+                        </div>
+                        <div class="msg">
+                            <div class="text">Mensagem *</div>
+                            <textarea rows"2" cols="25" required></textarea>
+                        </div>
+                        <div class="btn">
+                            <button type="submit"><b>Enviar</b></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!--main-content-->
+        <div class="bottom">
+
+            <div class="center"></div>
+            <span class="credit"> Criado por <a href="#"> Grupo7_MPK</a></span>
+            <span class="far fa-copyright"> 2022 Todos os direitos reservados</span>
+        </div>
+    </footer>
 
 </body>
 
