Integração de todas as paginas e links do site

--- a/estabelecimentos.html
+++ b/estabelecimentos.html
@@ -19,7 +19,9 @@
     <!-- CODIGO DO MÁRCIO -->
 
     <header class="cabecalho">
-        <img class="cabecalho-logo" src="img/LogoMPKrct.webp" alt="logoMpk">
+        <a href="./home.html">
+            <img class="cabecalho-logo" src="img/LogoMPKrct.webp" alt="logoMpk">
+        </a>
 
         <div class="search-box">
             <input type="text" class="search-txt" placeholder="Pesquisar..." />
@@ -69,7 +71,7 @@
             <a class="navbar-item3" href="#"><img src="img/carrinho-de-compras2.png" />Minhas Compras</a>
             <a class="navbar-item4" href="#"><img src="img/ofertaaz.png" />Ofertas</a>
             <a class="navbar-item5" href="#"><img src="img/trofeuaz.png" />Destaques do Mês</a>
-            <a class="navbar-item6" href="#"><img src="img/parceirocolor.png" />Parceiros</a>
+            <a class="navbar-item6" href="./parceiros.html"><img src="img/parceirocolor.png" />Parceiros</a>
             <a class="navbar-item7" href="#"><img src="img/compras-online.png" />Venda no MPK</a>
         </nav>
     </section>
