--- a/parceiros.html
+++ b/parceiros.html
@@ -19,7 +19,9 @@
     <!-- CODIGO DO MÁRCIO -->
 
     <header class="cabecalho">
-        <img class="cabecalho-logo" src="img/LogoMPKrct.webp" alt="logoMpk">
+        <a href="./home.html">
+            <img class="cabecalho-logo" src="img/LogoMPKrct.webp" alt="logoMpk">
+        </a>
 
         <div class="search-box">
             <input type="text" class="search-txt" placeholder="Pesquisar..." />
