Correção de links

--- a/estabelecimentos.html
+++ b/estabelecimentos.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/busca-estabelecimentos.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <script src="https://kit.fontawesome.com/610deb5134.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -34,9 +35,9 @@
 
         <nav class="dp-menu">
             <ul>
-                <li><a href="#">LOGIN</a></li>
+                <li><a href="./login.html">LOGIN</a></li>
                 <li>|</li>
-                <li><a href="#">CRIAR CONTA</a>
+                <li><a href="./cadastro.html">CRIAR CONTA</a>
 
                     <ul>
                         <li><a href="#">Usuário</a></li>
