--- a/parceiros.html
+++ b/parceiros.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/busca-estabelecimentos.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <script src="https://kit.fontawesome.com/610deb5134.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -34,9 +35,9 @@
 
         <nav class="dp-menu">
             <ul>
-                <li><a href="#">LOGIN</a></li>
+                <li><a href="./login.html">LOGIN</a></li>
                 <li>|</li>
-                <li><a href="#">CRIAR CONTA</a>
+                <li><a href="./cadastro.html">CRIAR CONTA</a>
 
                     <ul>
                         <li><a href="#">Usuário</a></li>
@@ -67,7 +68,7 @@
         </nav>
 
         <nav class="navbar">
-            <a class="navbar-item2" href="#"><img src="img/loja-online.png" />Estabelecimentos</a>
+            <a class="navbar-item2" href="./estabelecimentos.html"><img src="img/loja-online.png" />Estabelecimentos</a>
             <a class="navbar-item3" href="#"><img src="img/carrinho-de-compras2.png" />Minhas Compras</a>
             <a class="navbar-item4" href="#"><img src="img/ofertaaz.png" />Ofertas</a>
             <a class="navbar-item5" href="#"><img src="img/trofeuaz.png" />Destaques do Mês</a>
