--- a/cadastro.html
+++ b/cadastro.html
@@ -166,7 +166,7 @@
                         </div>
 
                         <div>
-                            <a href="/site/home.html">Voltar</a>
+                            <a href="./home.html">Voltar</a>
                         </div>
 
                 </form>
