Realizei pequenos ajustes no title, inclui ico e MPK junto a title

--- a/estabelecimentos.html
+++ b/estabelecimentos.html
@@ -8,7 +8,7 @@
 
     <!-- LOGO DA MKP NO NAVEGADOR AO LADO DO TITLE -->
     <link rel="shortcut icon" href="./img/NewLogo.ico" type="image/x-icon">
-    <title>MKP - Estabelecimentos</title>
+    <title>MPK - Estabelecimentos</title>
     <link rel="stylesheet" href="./css/estalecimentos.css">
     <link rel="stylesheet" href="./css/busca-estabelecimentos.css">
     <link rel="stylesheet" href="./css/header.css">
