--- a/cadastro.html
+++ b/cadastro.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/cadastro.css">
-    <title>Cadastro</title>
+    <link rel="shortcut icon" href="./img/NewLogo.ico" type="image/x-icon">
+    <title>Cadastro - MKP</title>
 </head>
 
 <body>
