Coloquei os links dos Linlinkedin da equipe e fiz um pequeno ajuste no hover da barra de pesquisa principal do site

--- a/parceiros.html
+++ b/parceiros.html
@@ -328,19 +328,27 @@
                 <div class="content">
                     <div class="place">
                         <div class="dev1">
-                            <span class="fab fa-linkedin"></span>
+                            <a href="https://www.linkedin.com/in/leonardo-feliciano/">
+                                <span class="fab fa-linkedin"></span>
+                            </a>
                             <span class="text">Leonardo F Lopes</span>
                         </div>
                         <div class="dev1">
-                            <span class="fab fa-linkedin"></span>
+                            <a href="https://www.linkedin.com/in/luciano-camargos-86753b48/">
+                                <span class="fab fa-linkedin"></span>
+                            </a>
                             <span class="text">Luciano Camargo</span>
                         </div>
                         <div class="dev1">
-                            <span class="fab fa-linkedin"></span>
+                            <a href="https://www.linkedin.com/in/mfmontovani/">
+                                <span class="fab fa-linkedin"></span>
+                            </a>
                             <span class="text">Marcio Montovani</span>
                         </div>
                         <div class="dev1">
-                            <span class="fab fa-linkedin"></span>
+                            <a href="www.linkedin.com/in/marceloCsantos-FullStack">
+                                <span class="fab fa-linkedin"></span>
+                            </a>
                             <span class="text">Marcelo C Santos</span>
                         </div>
                     </div>
